<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:label="fragment_asdfa"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/trackNameTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="16dp"
        android:hint="@string/name"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textNameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="Escriba aquí el nombre de la canción" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/trackLengthTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="16dp"
        android:hint="@string/length_track"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trackNameTextInputLayout">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textLengthField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="Escriba aquí el tamaño de la canción" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trackLengthTextInputLayout"
        app:layout_constraintVertical_bias="0.931">

        <Button
            android:id="@+id/saveTrackButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:text="@string/save"
            android:contentDescription="Con este botón guarda la canción para el album" />


        <Button
            android:id="@+id/cancelSaveTrackButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:contentDescription="Con este botón cancela el guardado de la canción para el album"  />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>