<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/albumTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Album Name"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                android:contentDescription="Título del album"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/albumImage"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerInside"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/albumTitle" />

            <TextView
                android:id="@+id/albumGenre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_gray"
                android:textSize="16sp"
                android:contentDescription="Género del album"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/albumImage" />

            <TextView
                android:id="@+id/albumLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_gray"
                android:textSize="16sp"
                android:contentDescription="Etiqueta del album"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/albumGenre" />

            <TextView
                android:id="@+id/albumReleaseDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_gray"
                android:textSize="16sp"
                android:contentDescription="Fecha de lanzamiento del album"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/albumLabel" />

            <TextView
                android:id="@+id/albumDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:contentDescription="Descripción del album"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/albumReleaseDate" />

            <TextView
                android:id="@+id/tracksText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/tracks"
                android:textColor="@color/dark_gray"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/albumDescription" />

            <TextView
                android:id="@+id/albumTracks"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:contentDescription="Tracks del album"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tracksText" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"

        app:srcCompat="@drawable/baseline_playlist_add_24"
        android:layout_margin="16dp"/>





</RelativeLayout>
